[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
hbb_common = {path = "libs/hbb_common"}
image = "0.24"
lazy_static = "1.4"
num_cpus = "1.13"
quinn = "0.9.3"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
rustls = { version = "0.20.6", features = ["quic", "dangerous_configuration"] }
rustls-pemfile = "1.0.2"
rcgen = "0.10.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tokio-util = "0.7.8"
futures = "0.3.28"

[workspace]
members = ["libs/hbb_common"]
